# mvr-gdtf

./: .gitignore  Cargo.toml  README.md  build.rs  regen_mvr.sh
codegen/: Cargo.toml
codegen/schema/: gdtf.xsd  mvr.rs  mvr.xsd
codegen/src/: common.rs  gdtf.rs  main.rs  mvr.rs
examples/: print.rs
mvr-gdtf/: Cargo.toml
mvr-gdtf/examples/: log_errors.rs  print.rs  xchange_client.rs  xchange_service.rs
mvr-gdtf/src/: error.rs  lib.rs  value.rs  values.rs
mvr-gdtf/src/gdtf/: desc.rs  description.rs  error.rs  mod.rs  schema.rs  value.rs
mvr-gdtf/src/mvr/: error.rs  gsd.rs  mod.rs  schema.rs  value.rs  values.rs
mvr-gdtf/src/xchange/: client.rs  error.rs  mod.rs  packet.rs  service.rs  station.rs
schema/: mvr.xsd
src/: error.rs  gsd.rs  lib.rs  main.rs  value.rs
src/gsd/: aux_data.rs  layers.rs  mod.rs  scene.rs  user_data.rs
src/gsd/layers/: fixture.rs  mod.rs
src/mvr/: mod.rs  schema.rs
tests/: load.rs
tests/mvr/: gen_mvr_archive.sh
tests/mvr/basic_festival/: 07f9d1d0-246b-4261-b604-de9f264141b6.glb  0eda3952-cf3f-423b-ad26-862708e7990e.glb  15393ecd-b871-41ce-b317-72a1296475c5.glb  2546ff9c-a9f6-4b2a-b110-0750e87bbbc2.glb  5e90d1c5-0532-4c92-9655-1b67c8dbf533.glb  7930b88e-9b26-4c1f-a440-ab5dced69ce1.glb  8ccfce8b-dd08-4d60-9bbb-29224f84211c.glb  Astera LED Technology@AX2-100 PixelBar.gdtf  Custom@Roxx_Cluster_B4_FC.gdtf  GeneralSceneDescription.xml  abdef799-ed08-49ea-8d5f-c2c9aed4622c.glb  ac40ddb3-73b9-42dc-8250-d14109ce8d70.glb  bff83011-378b-4527-964e-0a40f9686a95.glb  c7545827-5331-4b4c-8f69-f59e519939e4.glb  c7a44779-176f-4b06-be48-7810ca337f29.glb  e3c4df6d-a384-4996-afe6-83cb852a95cf.glb
tests/mvr/sample_show/: GeneralSceneDescription.xml  Robe Lighting@Robin Spiider.gdtf
