[package]
name = "mvr-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
quick-xml = { version = "0.39.2", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
uuid = { version = "1.21.0", features = ["serde", "v4"] }
zip = { version = "8.1.0", default-features = false, features = ["deflate"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dev-dependencies]
serde_json = "1.0.149"
