[package]
name = "mvr-gdtf"
version = "0.1.0"
edition = "2024"

[dependencies]
quick-xml = { version = "0.39.2", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
uuid = { version = "1.21.0", features = ["serde", "v4"] }
xsd-parser-types = { version = "0.1.2", features = ["quick-xml"] }

zip = { version = "8.1.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
serde_json = "1.0.149"

[build-dependencies]
quote = "1.0.44"
xsd-parser = "1.4.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
