[package]
name = "mvr-gdtf"
version.workspace = true
edition.workspace = true

[features]
default = []
mvr = ["gdtf"]
gdtf = []
xchange = ["mvr", "gdtf", "dep:local-ip-address", "dep:serde_json", "dep:mdns-sd", "dep:tokio", "dep:tokio-util", "dep:bytes", "dep:futures"]

[dependencies]
log = "0.4.29"
thiserror = "2.0.18"

# feature = "mvr" or "gdtf"
quick-xml = { version = "0.39.2", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.21.0", features = ["serde", "v4"] }
zip = { version = "8.1.0", default-features = false, features = ["deflate"] }

# feature = "xchange"
local-ip-address = { version = "0.6.10", optional = true }
mdns-sd = { version = "0.18.2", optional = true }
serde_json = { version = "1.0.149", optional = true }
tokio = { version = "1.50", features = ["rt", "net", "time", "macros"], optional = true }
tokio-util = { version = "0.7", features = ["codec"], optional = true }
bytes = { version = "1", optional = true }
futures = { version = "0.3", optional = true }
seahash = "4.1.0"

[lints]
workspace = true

[[example]]
name = "xchange_service"
required-features = ["xchange"]

[dev-dependencies]
pretty_env_logger = "0.5.0"
tokio = { version = "1.50", features = ["rt-multi-thread"] }
